# core-deposit-simulation

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: boj.yaml  boj_map.yaml  boj_mcmc.yaml  boj_with_covariate.yaml  example.yaml
data/: boj.csv  covariate.csv
src/simulation/: __init__.py  cli.py  config.py  mlflow_loader.py  mlflow_utils.py  plots.py  simulator.py
